--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <h1>Front End </h1>
           <p>
     HTML, CSS, & JavaScript are an essential part of every front-end developer’s arsenal. This website was created with those 3 core technologies.
-            The landing page in the link below was created with Bootstrap and JavaScript.
+            The landing page in the link below was created with mainly Bootstrap and JavaScript. It is linked to an active mailchimp list campaign.
             
 
            </p>
