--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     
     </div>
   
-  <p class="toptxtgame"><a href="/index.html">felixzavala.com 2021</p>
+  <p class="footertxt"><a href="/index.html">felixzavala.com 2021</p>
 </footer>
  
  </html>
