--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
         <div class="content">
           <h1>Front End </h1>
           <p>
-    HTML, CSS, & JavaScript are an essential part of every front-end developer’s arsenal. This website and the landing page in the link below
-           is an examples of what I am able to create with those 3 core technologies.
+    HTML, CSS, & JavaScript are an essential part of every front-end developer’s arsenal. This website is an examples of what I am able to create with those technologies.
             
             The landing page in the link below I created with mainly Bootstrap and JavaScript. I linked it to an active mailchimp list campaign to compile
             emails of those interested in learning more.
