--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
   />
   
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="shortcut icon" type="image/jpg" href="/img/fboxlogowhite.png"/>
 </head>
   <body>
