--- a/index.html
+++ b/index.html
@@ -380,13 +380,8 @@
         <i class="fa fa-linkedin w3-hover-opacity"></i>
       </div>
       <p>
-        <a
-          href="https://www.w3schools.com/w3css/default.asp"
-          title="W3.CSS"
-          target="_blank"
-          class="w3-hover-text-green"
-          >FelixZavala.com</a
-        >
+       
+          FelixZavala.com
       </p>
     </footer>
 
