--- a/emailtemplate.html
+++ b/emailtemplate.html
@@ -341,7 +341,7 @@
 
 						<tr>
 							<td style="text-align: center;padding: 45px 20px;color:#ffffff">
-								<a href="#"><img src="img/fzspace.png" alt="" width="180"></a>
+								<a href="#">
 							
 								<p style="padding: 10px;">felixzavala.com</p>
 								
