--- a/emailtemplate.html
+++ b/emailtemplate.html
@@ -164,7 +164,7 @@
         <!-- BANNER IMAGE -->
 		<tr>
 			<td>
-				<a href="#"></a><img src="img/pyrenees-gf46235b6b_1280.jpg" alt="" width="600" style="max-width: 100%;"></a>
+				<a href="#"></a><img src="img/modernwebdevbanner.jpg" alt="" width="600" style="max-width: 100%;"></a>
 			</td>
 		</tr>
 
