--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <div class="w3-container">
               <h3 class="center">Responsive Image Gallery</h3>
               <p class="center">
-                This is a portfolio site that I designed with a fully responsive image gallery.
+                This is a fully responsive image gallery that I created as an example of a portfolio page. This site was created with pure HTML and CSS.
               </p></a>
             
             </div>
