--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
         <div class="w3-col l4 m6 w3-margin-bottom">
           <div class="w3-card">
-            <a href="https://felixzavala.com/mars.html"><img src="/img/startup.JPG" alt="John" style="width: 100%" />
+            <a href="https://felixzavala.com/mars.html"><img src="/img/startupx.JPG" alt="John" style="width: 100%" />
             <div class="w3-container">
               <h3 class="center">Start Up Landing Page</h3>
            
