--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
         <div class="w3-col l4 m6 w3-margin-bottom">
           <div class="w3-card">
-            <a href="https://felixzavala.com/emailtemplate.html"><img src="/img/emailtemp.JPG" alt="John" style="width: 100%" />
+            <a href="https://felixzavala.com/emailtemplate.html"><img src="/img/emailtemp1.JPG" alt="John" style="width: 100%" />
             <div class="w3-container">
               <h3 class="center">Email Template</h3>
            
@@ -189,7 +189,7 @@
             <div class="w3-container">
               <h3 class="center">Responsive Image Gallery</h3>
               <p class="center">
-                This is a fully responsive image gallery that I created with pure HTML and CSS.
+                This responsive image gallery was created with pure HTML and CSS.
               </p></a>
             
             </div>
