--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <div class="w3-container">
               <h3 class="center">Responsive Image Gallery</h3>
               <p class="center">
-                This responsive image gallery was created with pure HTML and CSS.
+                This responsive image gallery was created with pure HTML and CSS. I also added a contact form at the end of the page.
               </p></a>
             
             </div>
