--- a/index.html
+++ b/index.html
@@ -215,7 +215,10 @@
               iPhone's native calculator app.
             </p>
             <br> <a href="https://jfelixzavala.github.io/iPhone_calculator/Java%20Calculator/index.html" target="blank">
-              <button type="button">Click Me!</button></a>
+              <button type="button">Calculator</button></a>
+              <a href=" https://github.com/JFELIXZAVALA/iPhone_calculator.git" target="blank">
+                <button type="button">Github Repo</button></a>
+             
            
          </div>
        </div>
