--- a/index.html
+++ b/index.html
@@ -470,6 +470,6 @@
       </p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
