--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
           <i class="fa fa-paint-brush w3-margin-bottom w3-jumbo"></i>
           <p class="w3-large">Graphic Design</p>
           <p>
-            I have my Associate of Arts degree in Graphic Communications
+            I have my Associate of Arts degree in Graphic Design
           </p>
         </div>
         <div class="w3-quarter">
           <i class="fa fa-heart w3-margin-bottom w3-jumbo w3-center"></i>
           <p class="w3-large">Passion</p>
           <p>
-        I have a geniune passion for making things look good on screen.
+       Geniune passion for coding
           </p>
         </div>
         <div class="w3-quarter">
@@ -130,16 +130,14 @@
 
           <p class="w3-large">JavaScript</p>
           <p>
-            Certified in JavaScript Basics as taught by Mosh Hamedani on
-            Udemy.com.
+            Certified in JavaScript
           </p>
         </div>
         <div class="w3-quarter">
           <i class="fa fa-mobile w3-margin-bottom w3-jumbo w3-center"></i>
           <p class="w3-large">Responsive Web Design</p>
           <p>
-            Certified in Responsive Web Design by freeCodeCamp.org,
-            representing 300 hours of coursework.
+            Certified in Responsive Web Design
           </p>
         </div>
       
