--- a/emailtemplate.html
+++ b/emailtemplate.html
@@ -155,7 +155,7 @@
         <!-- BANNER IMAGE -->
 		<tr>
 			<td>
-				<a href="#"></a><img src="img/modernwebdevbanner.jpg" alt="" width="600" style="max-width: 100%;"></a>
+				<a href="#"></a><img src="img/modernwebdevbanner-min.jpg" alt="" width="600" style="max-width: 100%;"></a>
 			</td>
 		</tr>
 
