--- a/mars.html
+++ b/mars.html
@@ -5,21 +5,24 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" type="text/css" href="/assets/css/stylemars.css" />
+
+    
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat"
       rel="stylesheet"
     />
 
+    <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-  
-
+       <!-- Your own stylesheet -->
+       <link rel="stylesheet" type="text/css" href="/assets/css/stylemars.css" />
+ 
   </head>
   <body>
     <div class="container d-flex align-items-center h-100">
