--- a/mars.html
+++ b/mars.html
@@ -13,14 +13,14 @@
       rel="stylesheet"
     />
 
-    <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
+    <!-- Bootstrap CSS from a CDN-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-       <!-- Your own stylesheet -->
+       <!--stylesheet -->
     <link rel="stylesheet" type="text/css" href="/assets/css/stylemars.css" />
  
   </head>
@@ -31,7 +31,7 @@
           <h1 class="text-uppercase">  <p class="countdown" id="demo"></p>
             <div class="buffersmall col-12"></div>
             <strong
-              >The <span id="strike">startup</span> event <span id="black">of the
+              >The <span id="strike">startup</span> event of the
               year!</strong
             ></span>
            
