--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img id="logo" src="img/FZ_Space_logo.png">
         <!-- Right-sided navbar links -->
         <div class="w3-right w3-hide-small">
-          <a href="#about" class="w3-bar-item w3-button"
+          <a href="about.html" class="w3-bar-item w3-button"
             ><i class="fa fa-user"></i> ABOUT</a
           >
           <a href="#work" class="w3-bar-item w3-button"
