--- a/about.html
+++ b/about.html
@@ -80,11 +80,11 @@
         <img id="aboutpic"
           src="img/aboutpic7.jpg"
           style="width: 50%"
-          alt="Felix Zavala About me pic"
+          alt="About me pic"
         />
       </center>
 
-      <!-- The Band Section -->
+      <!-- The About Section -->
 
       <div
         class="w3-container w3-content w3-center w3-padding-64"
