--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
           <i class="fa fa-mobile w3-margin-bottom w3-jumbo w3-center"></i>
           <p class="w3-large">Responsive Web Design</p>
           <p>
-            Certified in Responsive Web Design by FreeCodeCamp.org
+            Responsive Web Design Developer Certificate <br> FreeCodeCamp.org
           </p>
         </div>
         <div class="w3-quarter">
           <i class="fa fa-paint-brush w3-margin-bottom w3-jumbo"></i>
           <p class="w3-large">Graphic Design</p>
           <p>
-            Associate of Arts degree in Graphic Design
+            Associate of Arts degree in Graphic Design <br> Tarrant County College
           </p>
         </div>
         <div class="w3-quarter">
@@ -132,14 +132,15 @@
 
           <p class="w3-large">JavaScript</p>
           <p>
-            Certified in JavaScript through Udemy.com
+            JavaScript Basics <br> Udemy.com
           </p>
         </div>
         <div class="w3-quarter">
-          <i class="fa fa-heart w3-margin-bottom w3-jumbo w3-center"></i>
-          <p class="w3-large">Passion</p>
+          <i class="fa fa-desktop w3-margin-bottom w3-jumbo w3-center"></i>
+          <p class="w3-large">Computer Graphics</p>
           <p>
-       Geniune passion for coding
+            Computer Graphics Certificate <br>
+            Tarrant County College
           </p>
         </div>
        
