--- a/about.html
+++ b/about.html
@@ -86,8 +86,7 @@
         <p class="w3-center">
             I'm a software developer with a focus on front-end development. I'm currently living 
             and working out of the Dallas-Fort Worth area. In my spare time, I like to spend time 
-            with my family, travel, and I also enjoy training Brazilian jiu-jitsu. Currently, I'm in
-            the process of finishing up my degree in Computer Science from Southern New Hampshire University.
+            with my family, travel, and I also enjoy training Brazilian jiu-jitsu. 
         </p>
  
         <p>
