--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </div>
   
     
-    <div class="w3-container" style="padding: 128px 16px" id="about">
+    <div class="w3-container" style="padding: 128px 16px" id="work">
       <h3 class="w3-center"><span class="head-title">Some examples of my work</span>
       
       </h3>
