--- a/index.html
+++ b/index.html
@@ -388,14 +388,19 @@
     </div>
 
     <hr>
-
-
-
+<!--- Videos-->
+<div class="w3-center"><iframe width="560" height="315" src="https://www.youtube.com/embed/oN1sIzXuc0I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><iframe width="560" height="315" src="https://www.youtube.com/embed/xmaUznooZaI" title="YouTube video player" 
+  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/LWxtVuTz2v4" title="YouTube video player" 
+frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<p><br></p>
     <!-- Footer -->
     <footer class="w3-center w3-black w3-padding-24">
       <a href="#home" class="w3-button w3-black"
         ><i class="fa fa-arrow-up w3-margin-right"></i>Top</a
       >
+      
 
       <div class="w3-xlarge w3-section">
     
