--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 
     <hr>
 <!--- Videos-->
-<div class="w3-center"><iframe width="560" height="315" src="https://www.youtube.com/embed/oN1sIzXuc0I" title="YouTube video player" frameborder="5" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><iframe width="560" height="315" src="https://www.youtube.com/embed/xmaUznooZaI" title="YouTube video player" 
+<div class="w3-center"></iframe><iframe width="560" height="315" src="https://www.youtube.com/embed/xmaUznooZaI" title="YouTube video player" 
   frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/LWxtVuTz2v4" title="YouTube video player" 
 frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
