--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@ frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media
           
             <div class="buttons">
 
-              <a href="https://jfelixzavala.github.io/List-Generator/" target="blank">
-                <button class="center-button" type="button">List Generator</button></a>
+              <a href="https://felixzavala.com/emailtemplate.html" target="blank">
+                <button class="center-button" type="button">E-mail Template</button></a>
 
-                <a href=" https://github.com/JFELIXZAVALA/List-Generator/blob/8359c02467deb75a085c8f8f9860e7629238146f/index.html" target="blank">
+                <a href="https://github.com/JFELIXZAVALA/Felixzavala/blob/gh-pages/emailtemplate.html" target="blank">
                   <button class="center-button" type="button">Github Repo</button></a>
                
 
