--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <!-- Software Development Section -->
 
-    <h3><span class="head-title"><div id="back3a" >My Projects</span></h3>
+    <h3><span class="head-title" id="work"><div id="back3a" >My Projects</span></h3>
 
       <br />
 
