--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ This is an email template that I created with HTML and CSS. I created the compan
       
         <div class="buttons">
 
-       <a href="https://felixzavala.com/elevate.html" target="blank">
+       <a href="https://jfelixzavala.github.io/codepickle/" target="blank">
           <button class="center-button" type="button">Landing Page</button></a>
 
           <a href="https://github.com/JFELIXZAVALA/Felixzavala/blob/fea7e5a95e4a85d78e3f3c0922120e715671f189/elevate.html" target="blank">
