--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
       <hr>
 
   
-          <a href="https://jfelixzavala.github.io/iPhone_calculator/Java%20Calculator/index.html" target="blank"><img class="w3-hover-opacity" src="/img/jscalculator2.JPG" alt="JavaScript Calculator" style="width: 95%" />
+          <a href="https://jfelixzavala.github.io/iPhone_calculator/Java%20Calculator/index.html" target="blank"><img class="w3-hover-opacity" src="/img/calc.jpg" alt="JavaScript Calculator" style="width: 95%" />
 
 <h4>Front-End Web Apps</h4></a>
 
