--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <i class="fa fa-code w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
      
       <ul class="w3-left-align">
-        <li>Clean and modern written JavaScript</li>
+        <li>Clean and modern code</li>
         <li>Interactive user-focused experiences 
         </li>
         <li>Custom web apps & features</li>
