--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   
   <div class="column ">   
    
-    <a href="https://jfelixzavala.github.io/codepickle/" target="blank"><img class="w3-hover-opacity" src="/img/cpthumb1.JPG" alt="landing page thumb" style="width: 100%" />
+    <a href="https://jfelixzavala.github.io/codepickle/" target="blank"><img class="w3-hover-shadow" src="/img/cpthumb1.JPG" alt="Responsive Website thumb" style="width: 100%" />
 
     <h4>Responsive & Modern Websites</h4>
    
@@ -229,7 +229,7 @@
 
   <hr>
    
-      <a href="https://felixzavala.com/emailtemplate.html" target="blank"><img class="w3-hover-opacity" src="/img/emailcode.JPG" alt="JavaScript Calculator"/>
+      <a href="https://felixzavala.com/emailtemplate.html" target="blank"><img class="w3-hover-shadow" src="/img/emailcode.JPG" alt="HTML email thumb"/>
 
   <h4>HTML Emails & Templates</h4>
 
@@ -241,7 +241,7 @@
   
       <div class="column">  
 
-        <a href="https://jfelixzavala.github.io/login/" target="blank"><img class="w3-hover-opacity" src="/img/login.JPG" alt="Responsive Image Gallery" />
+        <a href="https://jfelixzavala.github.io/login/" target="blank"><img class="w3-hover-shadow" src="/img/login.JPG" alt="Custom login thumb" />
     
         <h4>Custom Login Screens</h4>
         
@@ -255,7 +255,7 @@
       <hr>
 
   
-          <a href="https://jfelixzavala.github.io/iPhone_calculator/Java%20Calculator/index.html" target="blank"><img class="w3-hover-opacity" src="/img/calc.jpg" alt="JavaScript Calculator" style="width: 95%" />
+          <a href="https://jfelixzavala.github.io/iPhone_calculator/Java%20Calculator/index.html" target="blank"><img class="w3-hover-shadow" src="/img/calc.jpg" alt="JavaScript Calculator" style="width: 95%" />
 
 <h4>Front-End Web Apps</h4></a>
 
@@ -319,7 +319,7 @@
             src="img/lofi.jpg"
             onclick="onClick(this)"
             class="w3-hover-opacity"
-            alt="This is a mockup of a beard oil label that I created with Adobe Illustrator and Photoshop"
+            alt="This is a custom image I created for a YouTube thumbnail picture"
           />
         </div>
 
@@ -340,7 +340,7 @@
             src="img/Mockupsmaller.jpg"
             onclick="onClick(this)"
             class="w3-hover-opacity"
-            alt="This is an original illustration I created with Adobe Illustrator"
+            alt="This is an a magazine spread that I designed"
           />
         </div>
         <div class="w3-col m6" >
@@ -348,7 +348,7 @@
             src="/img/battlecoffee.jpg"
             onclick="onClick(this)"
             class="w3-hover-opacity"
-            alt="This is a logo that I created for an outreach center"
+            alt="This is a web ad"
           />
         </div>
         <div class="w3-row-padding">
