--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     
@@ -192,30 +192,7 @@
             <p class="page-section__paragraph">
          These are some examples of my work
             </p>
-            <div class="portfolio__button-group">
-              <a class="button button--default" data-filter="all" href="#"
-                >ALL</a
-              >
-              <a
-                class="button button--default"
-                data-filter=".category-a"
-                href="#"
-                >DEVELOPMENT</a
-              >
-              <a
-                class="button button--default"
-                data-filter=".category-b"
-                href="#"
-                >DESIGN</a
-              >
-              <a
-                class="button button--default"
-                data-filter=".category-c"
-                href="#"
-                >HTML</a
-              >
-             
-            </div>
+ 
             <div class="row gutters-40">
               <div class="col-md-4">
                 <div
@@ -395,13 +372,6 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/mixitup.js"></script>
 
-    <script>
-      $("a").click(function (e) {
-        e.preventDefault();
-      });
 
-      // calling mixitup
-      var mixer = mixitup(".portfolio");
-    </script>
   </body>
 </html>
