--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="row gutters-80">
               <div class="col-md-4">
                 <div class="about__image">
-                  <img id="about__image" src="assets/img/about-me-pic.jpg" alt="" />
+                  <img id="about__image" src="assets/img/about-me-pic4.png" alt="" />
                 </div>
               </div>
               <h2 id="about" class="page-section__title">ABOUT ME</h2>
@@ -432,7 +432,7 @@
           <div class="social-icon">
             <ul>
               <li>
-                <a href="mailto: jfelixzavala@yahoo.com" target="blank"><span id="social-big"><i class="fa fa-envelope"></i></a></span>
+                <a href="mailto: jfelixzavala10@gmail.com" target="blank"><span id="social-big"><i class="fa fa-envelope"></i></a></span>
 
               </li>
               <li>
