--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
        
                 <div class="row">
                   <div class="col-md-4">
-                    <a class="button button--colorful button--margin" href="assets/img/pdf"
+                    <a class="button button--colorful button--margin" href="assets/img/Felix Zavala Resume.pdf"
                       >RESUME <i class="fa fa-download" download></i></a
                     >
                   </div>
