--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 >
                   <img
                     class="portfolio__single-section__image img-responsive"
-                    src="assets/img/coffeeshop.JPG"
+                    src="assets/img/BJJROBOTScreenShot.png"
                     alt=""
                   />
                   <div class="portfolio__single-section__overlay">
