--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                      
                     </div>
                     <div class="portfolio__single-section__search-icon">
-                      <a href="https://jfelixzavala.github.io/coffeeshop/" target="blank"><img class="click" src="assets/img/tap.png" alt=""
+                      <a href="https://www.bjjrobot.com/" target="blank"><img class="click" src="assets/img/tap.png" alt=""
                       /></a></a>
                     </div>
                   </div>
