--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Felix Zavala</title>
     <meta
       name="keywords"
-      content="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod."
+      content="Felix Zavala Online Portfolio"
     />
     <meta
       name="description"
-      content="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod."
+      content="Felix Zavala Online Portfolio"
     />
 
     <link rel="stylesheet" href="assets/fonts/flat-icon/flaticon.css" />
@@ -79,7 +79,7 @@
                   <img id="about__image" src="assets/img/about-me-pic4.png" alt="" />
                 </div>
               </div>
-              <h2 id="about" class="page-section__title">ABOUT ME</h2>
+              <h2 id="about" class="page-section__title">A LITTLE BIT ABOUT ME</h2>
               <img
                 class="page-section__title-style"
                 src="assets/img/blue_lines.png"
@@ -87,7 +87,7 @@
               />
               <div class="col-md-8 about__content">
                 <p class="about__description">
-                  I'm a software developer and graphic designer with a focus on web development. I'm currently 
+                  I'm an experienced software developer with a focus on email and web development. I have a background in graphic design and have worked many years as a freelance graphic designer. I'm currently 
                   working as a digital developer remotely from Dallas, Texas. In my spare time, I like to spend time with my 
                   family and travel.
 
@@ -183,13 +183,13 @@
               
               <div class="col-md-4">
                 <div class="thumbnail">
-                  <h4 class="service__single-section__title text-center">UI/UX DESIGN</h4>
+                  <h4 class="service__single-section__title text-center">HTML EMAIL</h4>
                   <div class="text-center icon-big"><i class="fa fa-code"></i></div>
              
                   <p class="service__single-section__paragraph align_left">
                     • Clean and modern code <br>
                     • User-focused experiences<br>
-                    • Custom web apps
+                    • Dynamic Content
                   </p>
                 </div>
               </div>
