--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="row gutters-80">
               <div class="col-md-4">
                 <div class="about__image">
-                  <img id="about__image" src="assets/img/about-me-pic4.png" alt="" />
+                  <img id="about__image" src="img/greetings_emoji.png" alt="" />
                 </div>
               </div>
               <h2 id="about" class="page-section__title">A LITTLE BIT ABOUT ME</h2>
