--- a/emailtemplate.html
+++ b/emailtemplate.html
@@ -395,11 +395,11 @@
 									</th>
 								</tr>
 								<!-- END: MODULE - 2-UP WITH IMAGES (2up) -->
-								<!-- START: MODULE: FULL WIDTH IMAGE (full-width-image) -->
+								<!-- START: MODULE: FULL WIDTH BANNER -->
 								<tr>
 									<th align="center" border="0" class="hero" style="padding: 0px; padding-top: 40px; width: 100%;" width="100%"><a href="#" name="1up1_image" target="_blank" xt="SPCLICK"><img alt="" border="0" height="" name="Cont_2" src="https://felixzavala.com/img/fitbanner-min.jpg" style="display: block; margin: 0 auto;" width="640" /></a></th>
 								</tr>
-								<!-- END: MODULE: FULL WIDTH IMAGE (full-width-image) -->
+								<!-- END: MODULE: FULL WIDTH BANNER -->
 							</tbody>
 						</table>
 						</th>
