--- a/emailtemplate.html
+++ b/emailtemplate.html
@@ -184,7 +184,7 @@
 										<tbody>
 											<tr>
 												<th align="center" border="0" style="padding: 0px; width: 100%;" width="100%">
-												<h1 class="txt--h1" style="color: #1a1a1a; font-family: 'museo-sans', Arial, sans-serif; font-size: 30px; font-weight: bold; font-weight: 700; line-height: 1.17; margin: 0px; text-align: center; mso-line-height-alt: 35px;">HOW IMPORTANT IS CARDIO?</h1>
+												<h1 class="txt--h1" style="color: #1a1a1a; font-family: 'museo-sans', Arial, sans-serif; font-size: 36px; font-weight: bold; font-weight: 700; line-height: 1.17; margin: 0px; text-align: center; mso-line-height-alt: 35px;">How Important is Cardio?</h1>
 
 												<p class="txt--body" style="color: #1a1a1a; font-family: 'proxima-nova', Arial, sans-serif; font-size: 17px; font-weight: normal; font-weight: 300; line-height: 1.41; margin: 0px; margin-top: 15px; text-align: left; mso-line-height-alt: 24px;">Cardio is an important part of any fitness routine. But, there are some people who think that they should do it everyday. The truth is, you don't have to do cardio every day. You can do it as often as you want, but try not to overdo it.
 
@@ -195,7 +195,7 @@
 											</tr>
 											<!-- button --><!-- START: BUTTON (button) -->
 											<tr>
-												<th align="center" border="0" style="padding: 0px; padding-top: 25px; width: 100%;" width="100%">
+												<th align="center" border="0" style="padding: 0px; padding-top: 30px; width: 100%;" width="100%">
 												<table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation">
 													<tbody>
 														<tr>
@@ -216,7 +216,7 @@
 									<table align="center" border="0" cellpadding="0" cellspacing="0" class="mobile" role="presentation" style="width: 100%;" width="100%">
 										<tbody>
 											<tr>
-												<th align="center" border="0" class="m-pad-lr--20" style="background-color: #364347; padding: 0px; padding-bottom: 40px; padding-left: 40px; padding-right: 40px; padding-top: 30px; width: 100%;" width="100%"><!-- added border to stop outlook from adding white line --><!-- added webkit border to remove it from macbook rendering on dark mode -->
+												<th align="center" border="0" class="m-pad-lr--20" style="background-color: #757575; padding: 0px; padding-bottom: 40px; padding-left: 40px; padding-right: 40px; padding-top: 30px; width: 100%;" width="100%"><!-- added border to stop outlook from adding white line --><!-- added webkit border to remove it from macbook rendering on dark mode -->
 												<table align="center" border="0" cellpadding="0" cellspacing="0" class="mobile" role="presentation" style="width: 100%; border: 1px solid #364347; -webkit-border-before: 0px; -webkit-border-after: 0px; -webkit-border-start: 0px; -webkit-border-end: 0px;" width="100%">
 													<tbody>
 														<tr>
@@ -224,7 +224,7 @@
 															<table align="center" border="0" cellpadding="0" cellspacing="0" class="mobile" role="presentation" style="width: 100%;" width="100%">
 																<tbody>
 																	<tr>
-																		<th align="center" border="0" style="padding: 0px; width: 100%;" width="100%"><a border="0" href="#" name="2up4_1_image" target="_blank" xt="SPCLICK"><img alt="" border="0" height="" name="Cont_4" src="https://felixzavala.com/assets/img/homeworkout-min.jpg" style="display: block; margin: 0 auto;" width="180" /></a></th>
+																		<th align="center" border="0" style="padding: 0px; width: 100%;" width="100%"><a border="0" href="#" name="2up4_1_image" target="_blank" xt="SPCLICK"><img alt="" border=""  height="" name="Cont_4" src="https://felixzavala.com/assets/img/homeworkout-min.jpg" style="display: block; margin: 0 auto; border-color: #ffffff; border-width: 5px; border-radius: 2px; border-style: solid;" width="245" /></a></th>
 																	</tr>
 																</tbody>
 															</table>
@@ -242,9 +242,9 @@
 																						<tbody>
 																							<tr>
 																								<th align="center" border="0" class="m-pad-t--30" style="padding: 0px; width: 100%;" width="100%">
-																								<h2 class="txt--h2" style="color: #ffffff; font-family: 'museo-sans', Arial, sans-serif; font-size: 26px; font-weight: bold; font-weight: 700; line-height: 1.23; margin: 0px; text-align: left; mso-line-height-alt: 32px;">UPGRADE YOUR WORKOUT</h2>
+																								<h2 class="txt--h2" style="color: #ffffff; font-family: 'museo-sans', Arial, sans-serif; font-size: 26px; font-weight: bold; font-weight: 700; line-height: 1.23; margin: 0px; text-align: left; mso-line-height-alt: 32px;">Upgrade Your Workout</h2>
 
-																								<p class="txt--body" style="color: #ffffff; font-family: 'proxima-nova', Arial, sans-serif; font-size: 17px; font-weight: normal; font-weight: 300; line-height: 1.41; margin: 0px; margin-top: 15px; text-align: left; mso-line-height-alt: 24px;">Regardless of your fitness goal is, We got the tips to take your workouts to the next level!
+																								<p class="txt--body" style="color: #ffffff; font-family: 'proxima-nova', Arial, sans-serif; font-size: 17px; font-weight: normal; font-weight: 300; line-height: 1.41; margin: 0px; margin-top: 15px; text-align: left; mso-line-height-alt: 24px;">Regardless of your fitness goals, we have the tips from the experts to take your workouts to the next level!
 
 																								</p>
 																								</th>
@@ -255,7 +255,7 @@
 																								<table align="left" border="0" cellpadding="0" cellspacing="0" role="presentation">
 																									<tbody>
 																										<tr>
-																											<th align="center" border="0" class="txt--btn" style="background-color: #3fa9f5; border-radius: 4px; color: #1a1a1a; font-family: 'proxima-nova', Arial, sans-serif; font-size: 16px; font-weight: bold; font-weight: 700; padding: 0px; padding-bottom: 16px; padding-left: 27px; padding-right: 27px; padding-top: 16px; text-align: center; width: 100%;" width="100%"><a href="https://www.EternalFit.com/" name="CTAname_button" style="color: #1a1a1a; text-decoration: none;" target="_blank" xt="SPCLICK">Ready To Upgrade?</a></th>
+																											<th align="center" border="0" class="txt--btn" style="background-color: #3fa9f5; border-radius: 4px; color: #1a1a1a; font-family: 'proxima-nova', Arial, sans-serif; font-size: 16px; font-weight: bold; font-weight: 700; padding: 0px; padding-bottom: 16px; padding-left: 27px; padding-right: 27px; padding-top: 16px; text-align: center; width: 100%;" width="100%"><a href="https://www.EternalFit.com/" name="CTAname_button" style="color: #ffffff; text-decoration: none;" target="_blank" xt="SPCLICK">Ready To Upgrade?</a></th>
 																										</tr>
 																									</tbody>
 																								</table>
@@ -284,14 +284,14 @@
 								</tr>
 								<!-- END MODULE: IMAGE TEXT RIGHT - COLOR (img-txt-right-colored) --><!-- START: BULLET LIST (bullet-list) --><!-- text section -->
 								<tr>
-									<th align="center" border="0" class="m-pad-lr--20" style="padding: 0px; padding-top: 60px; width: 100%;" width="100%">
+									<th align="center" border="0" class="m-pad-lr--20" style="padding: 0px; padding-top: 50px; width: 100%;" width="100%">
 									<table align="center" border="0" cellpadding="0" cellspacing="0" class="mobile" role="presentation" style="width: 100%;" width="100%"><!-- headline h3 and paragraph -->
 										<tbody>
 											<tr>
 												<th align="center" border="0" style="padding: 0px; width: 100%;" width="100%">
-													<h2 class="txt--h1" style="color: #1a1a1a; font-family: 'museo-sans', Arial, sans-serif; font-size: 36px; font-weight: bold; font-weight: 700; line-height: 1.17; margin: 0px; text-align: LEFT; mso-line-height-alt: 35px; text-decoration:none;">ATHLETE SPOTLIGHT</h2>
+													<h2 class="txt--h1" style="color: #1a1a1a; font-family: 'museo-sans', Arial, sans-serif; font-size: 36px; font-weight: bold; font-weight: 700; line-height: 1.17; margin: 0px; text-align: center; mso-line-height-alt: 35px; text-decoration:none;">Athlete Spotlight</h2>
 
-												<p class="txt--body" style="color: #1a1a1a; font-family: 'proxima-nova', Arial, sans-serif; font-size: 17px; font-weight: normal; font-weight: 300; line-height: 1.41; margin: 0px; margin-top: 15px; text-align: left; mso-line-height-alt: 24px;">Every week we choose 2 athletes who have made a significant contribution to their sport and is deserving of recognition. We will be highlighting athletes from all levels and disciplines, including high school, college, professional, and Olympic level athletes.</p>
+												<p class="txt--body" style="color: #1a1a1a; font-family: 'proxima-nova', Arial, sans-serif; font-size: 17px; font-weight: normal; font-weight: 300; line-height: 1.41; margin: 0px; margin-top: 20px; text-align: left; mso-line-height-alt: 24px;">Every week we choose 2 athletes who have made a significant contribution to their sport and is deserving of recognition. We will be highlighting athletes from all levels and disciplines, including high school, college, professional, and Olympic level athletes.</p>
 												</th>
 											</tr>
 										</tbody>
@@ -302,7 +302,7 @@
 							
 						<!-- START: MODULE - 2-UP WITH IMAGES (2up)-->
 								<tr>
-									<th align="center" border="0" style="padding: 0px; padding-top: 40px; width: 100%;" width="100%">
+									<th align="center" border="0" style="padding: 0px; padding-top: 30px; width: 100%;" width="100%">
 									<table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width: 100%;" width="100%">
 										<tbody>
 											<tr><!-- col 1 -->
@@ -397,7 +397,7 @@
 								<!-- END: MODULE - 2-UP WITH IMAGES (2up) -->
 								<!-- START: MODULE: FULL WIDTH BANNER -->
 								<tr>
-									<th align="center" border="0" class="hero" style="padding: 0px; padding-top: 40px; width: 100%;" width="100%"><a href="#" name="1up1_image" target="_blank" xt="SPCLICK"><img alt="" border="0" height="" name="Cont_2" src="https://felixzavala.com/img/fitbanner-min.jpg" style="display: block; margin: 0 auto;" width="640" /></a></th>
+									<th align="center" border="0" class="hero" style="padding: 0px; padding-top: 50px; width: 100%;" width="100%"><a href="#" name="1up1_image" target="_blank" xt="SPCLICK"><img alt="" border="0" height="" name="Cont_2" src="https://felixzavala.com/assets/img/fitbanner-min.jpg" style="display: block; margin: 0 auto;" width="640" /></a></th>
 								</tr>
 								<!-- END: MODULE: FULL WIDTH BANNER -->
 							</tbody>
