--- a/index.html
+++ b/index.html
@@ -265,18 +265,18 @@
                   class="portfolio__single-section mix category-c"
                   data-order="3"
                 >
-                <a href="https://felixzavala.com/emailtemplate.html" target="blank"><img
+                <a href="https://felixzavala.com/assets/img/eternalfit-email-preview-min.png" target="blank"><img
                     class="portfolio__single-section__image img-responsive"
                     src="assets/img/emailcode.JPG"
                     alt=""
                   /></a>
                   <div class="portfolio__single-section__overlay">
-                    <a href="https://felixzavala.com/emailtemplate.html" target="blank"><div class="overlay-content">
+                    <a href="https://felixzavala.com/assets/img/eternalfit-email-preview-min.png" target="blank"><div class="overlay-content">
                       <h4>HTML EMAIL</h4>
                
                     </div>
                     <div class="portfolio__single-section__search-icon">
-                      <a href="https://felixzavala.com/emailtemplate.html" target="blank"><img class="click" src="assets/img/tap.png" alt=""
+                      <a href="https://felixzavala.com/assets/img/eternalfit-email-preview-min.png" target="blank"><img class="click" src="assets/img/tap.png" alt=""
                       /></a></a>
                     </div>
                   </div>
