--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@
                   class="portfolio__single-section mix category-c"
                   data-order="3"
                 >
-                <a href="https://felixzavala.com/assets/img/eternalfit-email-preview-min.png" target="blank"><img
+                <a href="https://felixzavala.com/emailtemplate.html" target="blank"><img
                     class="portfolio__single-section__image img-responsive"
-                    src="assets/img/emailcode.JPG"
+                    src="https://felixzavala.com/assets/img/eternalfit-email-preview-min.png"
                     alt=""
                   /></a>
                   <div class="portfolio__single-section__overlay">
